Nodegroups don't update the shaders anymore in 3.1 #96402

Closed
opened 2022-03-13 16:42:35 +01:00 by florian benedetto · 7 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: 3.0
Caused by: 7e712b2d6a

Short description of error
No update shader in Blender3.1

Exact steps for others to reproduce the error
Hi dear blender developers,

Recently, we discover a new bug linked to Blender 3.1:
The shaders don't update in blender when we change the parameters of the nodegroup. This is happening when the material output is contained inside a nodegroup. ( See the video example below ). It always worked fine until now, in 3.1, in order to fix the shaders we need to quit the rendered view and restart it.

This is heavily impacting our productions, we have multiple thousands of materials currently broken in 3.1. We hope that this can be fixed in 3.2, all the users and studios using our materials are currently stuck/complaining with this problem.

Cheers,

Bproduction

project2 (1).mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: 3.0 Caused by: 7e712b2d6a **Short description of error** No update shader in Blender3.1 **Exact steps for others to reproduce the error** Hi dear blender developers, Recently, we discover a new bug linked to Blender 3.1: The shaders don't update in blender when we change the parameters of the nodegroup. This is happening when the material output is contained inside a nodegroup. ( See the video example below ). It always worked fine until now, in 3.1, in order to fix the shaders we need to quit the rendered view and restart it. This is heavily impacting our productions, we have multiple thousands of materials currently broken in 3.1. We hope that this can be fixed in 3.2, all the users and studios using our materials are currently stuck/complaining with this problem. Cheers, Bproduction [project2 (1).mp4](https://archive.blender.org/developer/F12925118/project2__1_.mp4)

Added subscriber: @FLORIANBENEDETTO

Added subscriber: @FLORIANBENEDETTO
florian benedetto changed title from No update shaders in Blender3.1 to Nodegroups do not update the shaders anymore in 3.1 2022-03-13 17:00:11 +01:00
florian benedetto changed title from Nodegroups do not update the shaders anymore in 3.1 to Nodegroups don't update the shaders anymore in 3.1 2022-03-13 17:01:16 +01:00
Member

Added subscribers: @JacquesLucke, @Alaska

Added subscribers: @JacquesLucke, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this. It happens in both Cycles and EEVEE.

The cause for it is this commit 7e712b2d6a
CC @JacquesLucke

System Information
Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54
Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-14 03:25, hash: 541ba68991

I can confirm this. It happens in both Cycles and EEVEE. The cause for it is this commit 7e712b2d6a CC @JacquesLucke **System Information** Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-14 03:25, hash: `541ba68991`

This issue was referenced by 45482ac576

This issue was referenced by 45482ac5764f133f401dd84cc1df1c9e331ca239

This issue was referenced by bf5e9ef2df

This issue was referenced by bf5e9ef2df3e755069ba9a1ce06d375d670e139c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-03-14 10:50:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96402
No description provided.